fixed issue with horizontal scrollbar on login page

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -376,3 +376,7 @@ textarea:focus, input:focus {
 .ui-widget-header {
 	max-height:20px;
 }
+
+.ui-menu .ui-menu-item .ui-menu-item-label {
+	padding:.2em 1em;
+}
